<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <!-- Auth screens (no bottom nav) -->

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.vet4pet.app.ui.fragments.LoginFragment"
        android:label="Sign In"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.vet4pet.app.ui.fragments.RegisterFragment"
        android:label="Create Account"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment" />
    </fragment>

    <!-- Main app screens (with bottom nav) -->

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.vet4pet.app.ui.fragments.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/petsListFragment"
        android:name="com.vet4pet.app.ui.fragments.PetsListFragment"
        android:label="@string/nav_pets"
        tools:layout="@layout/fragment_pets_list">
        <action
            android:id="@+id/action_petsListFragment_to_medicalHistoryFragment"
            app:destination="@id/medicalHistoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/appointmentsFragment"
        android:name="com.vet4pet.app.ui.fragments.AppointmentsFragment"
        android:label="@string/nav_appointments"
        tools:layout="@layout/fragment_appointments">
        <action
            android:id="@+id/action_appointmentsFragment_to_bookAppointmentFragment"
            app:destination="@id/bookAppointmentFragment" />
    </fragment>

    <fragment
        android:id="@+id/bookAppointmentFragment"
        android:name="com.vet4pet.app.ui.fragments.BookAppointmentFragment"
        android:label="@string/book_title"
        tools:layout="@layout/fragment_book_appointment" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.vet4pet.app.ui.fragments.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/messagesFragment"
        android:name="com.vet4pet.app.ui.fragments.MessagesFragment"
        android:label="@string/nav_messages"
        tools:layout="@layout/fragment_messages">
        <action
            android:id="@+id/action_messagesFragment_to_chatFragment"
            app:destination="@id/chatFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.vet4pet.app.ui.fragments.ChatFragment"
        android:label="@string/messages_chat_title"
        tools:layout="@layout/fragment_chat">
        <argument
            android:name="partnerId"
            app:argType="string" />
        <argument
            android:name="partnerName"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/medicalHistoryFragment"
        android:name="com.vet4pet.app.ui.fragments.MedicalHistoryFragment"
        android:label="@string/title_medical_history"
        tools:layout="@layout/fragment_medical_history">
        <argument
            android:name="petId"
            app:argType="string" />
        <action
            android:id="@+id/action_medicalHistoryFragment_to_medicalRecordDetailFragment"
            app:destination="@id/medicalRecordDetailFragment" />
        <action
            android:id="@+id/action_medicalHistoryFragment_to_addMedicalRecordFragment"
            app:destination="@id/addMedicalRecordFragment" />
    </fragment>

    <fragment
        android:id="@+id/medicalRecordDetailFragment"
        android:name="com.vet4pet.app.ui.fragments.MedicalRecordDetailFragment"
        android:label="@string/title_medical_record_detail"
        tools:layout="@layout/fragment_medical_record_detail">
        <argument
            android:name="record"
            app:argType="com.vet4pet.app.data.models.MedicalRecord" />
    </fragment>

    <fragment
        android:id="@+id/addMedicalRecordFragment"
        android:name="com.vet4pet.app.ui.fragments.AddMedicalRecordFragment"
        android:label="@string/title_add_medical_record"
        tools:layout="@layout/fragment_add_medical_record">
        <argument
            android:name="petId"
            app:argType="string" />
    </fragment>

</navigation>
